--- a/todo.html
+++ b/todo.html
@@ -127,6 +127,7 @@
 												<tr>
 													<th>ID</th>
 													<th>Title</th>
+													<th>Subtask Progress</th>
 													<th>Status</th>
 													<th>Published</th>
 													<th>Start Date</th>
@@ -176,7 +177,7 @@
 	<!-- END wrapper -->
 
 	<div class="modal fade" id="task-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="task-modal-title" aria-hidden="true">
-		<div class="modal-dialog modal-lg">
+		<div class="modal-dialog modal-lg modal-dialog-scrollable">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h4 class="modal-title" id="task-modal-title">Task</h4>
@@ -225,6 +226,19 @@
 						<div class="col-sm-10" style="vertical-align:middle;">
 							<input type="checkbox" id="task-publish" checked data-switch="bool"/>
 							<label for="task-publish" data-on-label="On" data-off-label="Off"></label>
+						</div>
+					</div>
+
+					<div class="mb-2 row">
+						<label for="task-subtask" class="col-sm-2 col-form-label col-form-label-sm">Subtask</label>
+						<div class="col-sm-10" style="vertical-align:middle;">
+							<div class="input-group">
+								<input type="text" id="task-subtask-title" class="form-control form-control-sm" placeholder="Enter subtask" autocomplete="off">
+								<button id="task-subtask-add" type="button" class="btn btn-outline-secondary">
+									<i class="mdi mdi-plus"></i> Add Subtask
+								</button>
+						  </div>
+						  <ul class="list-group mt-2" id="task-subtask-list"></ul>
 						</div>
 					</div>
 				</div>
