--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
 <!-- Mirrored from coderthemes.com/hyper/saas/pages-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 22 Jan 2024 04:34:26 GMT -->
 <head>
    <meta charset="utf-8" />
-   <title>Register | To-do App</title>
+   <title>Register | Task App</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
    <meta content="Coderthemes" name="author" />
@@ -22,6 +22,14 @@
 </head>
 
 <body class="authentication-bg position-relative">
+   <!-- Pre-loader -->
+	<div id="preloader">
+		<div id="status">
+			 <div class="bouncing-loader"><div ></div><div ></div><div ></div></div>
+		</div>
+	</div>
+	<!-- End Preloader-->
+   
    <div class="account-pages pt-2 pt-sm-5 pb-4 pb-sm-5 position-relative">
       <div class="container">
          <div class="row justify-content-center">
